HEAD
	+ Remove upload/download fields from gateways.
	  Traffic shaping has its own model for that
1.3.4
	+ bugfix: add use=web to guess the public address
	+ bugfix: make ddclient work with dhcp configured interfaces
	+ bugfix: multi gateway rules work again
1.3.3
	+ Bugfix: Edition and removal routes is working again
	+ Remove those static routes that they have been manually added
1.3.1
	+ bugfix: do not use Net::DNS
	+ bugfix: used vlan interface can be removed	
1.3.0
	+ bugfix: restart network interfaces properly
1.2
	+ Added support for WAN failover
	+ ifaceNetmask method now uses DHCPNetmask to get the dhcp ifaces
	netmask instead NetWrapper call this adds symethrie with
	ifaceAdrress method and fixes a bug when changing a dhcp interface
	with no lease to static interface
1.1.30
	+ Added support for all missing netmasks between /16 and /32
	+ Added support for search domain in /etc/resolv.conf
	+ Use a template to write down /etc/resolv.conf to allow easier
	user modifications
	+ Use ICMP for traceroute diagnosis
1.1
	+ Added traceroute on network diagnosis
	+ Use new rows() and ids() API
	+ Bugfix: ebox-netcfg-import uses model API to import default gateway
	+ Support for dyndns
	+ Gateway models does not use longet custom views
	+ Gateway rules table now use services
0.12.99
	+ New release
0.12
	+ Use new EBox::Model::Row api
	+ Add help to model fields
	+ Remove default option auotmatically if another router is set as default
0.11.102
	+ Bugfix: Static routes are deleted from ip when they are not
	useful
	+ Bugfix: Fixing wrong href in multigateway rules page
0.11.101
	+ Static routes become a model with three methods exposed
	+ Remove usage of a deprecated method in NetWrappers
	+ DNS resolvers become  a model with three methods exposed. Now
	you may add as many DNS resolvers you want
	+ Use separator ':' in exposed method using '/' for addresses
O.11.100
	+ Disable network traffic monitor due to a bug in perl and RRDs module