@@ -2105,12 +2105,6 @@ sub _multigwRoutes
         root("/sbin/iptables -t mangle -A PREROUTING "
             ."-j CONNMARK --save-mark");
     } catch EBox::Exceptions::Internal with {};
-
-        try {
-                root("/sbin/iptables -t mangle -I OUTPUT "
-                        ."-j CONNMARK --save-mark");
-        } catch EBox::Exceptions::Internal with {};
-
 }
 
 sub isRunning
