@@ -1,6 +1,8 @@
 HEAD
 	+ Remove upload/download fields from gateways.
 	  Traffic shaping has its own model for that
+	+ Bug fix: traffic generated by eBox didn't come out from the
+	  right interface as we cleared the CONNMARK with a --save-mark
 1.3.4
 	+ bugfix: add use=web to guess the public address
 	+ bugfix: make ddclient work with dhcp configured interfaces
@@ -10,7 +12,7 @@ HEAD
 	+ Remove those static routes that they have been manually added
 1.3.1
 	+ bugfix: do not use Net::DNS
-	+ bugfix: used vlan interface can be removed	
+	+ bugfix: used vlan interface can be removed
 1.3.0
 	+ bugfix: restart network interfaces properly
 1.2
